fix: landing page on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
  body{
    margin: 0%;
    font-family: Arial, Helvetica, sans-serif;
+   padding-left: 300px;
  }
 
  .App{
@@ -13,12 +14,13 @@
    color: inherit;
  } 
 
- body{
-   padding-left: 300px;
+ @media (max-width: 850px){
+   body{
+   padding-left: 0px;
+ }
  }
  .page{
   min-height: 100vh;
-  min-width: 400px;
   align-items: center;
   margin: auto;
 }
